<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_ripple"
    android:focusable="true"
    android:clickable="true">

    <TextView
        android:id="@+id/text_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:singleLine="true"
        android:text="@string/text_tes"
        android:textColor="@color/normal_start"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="@+id/text_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage,TextSizeCheck" />

    <ImageView
        android:id="@+id/image_avatar"
        android:layout_width="@dimen/layout_width_80"
        android:layout_height="@dimen/layout_height_80"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:singleLine="true"
        android:text="@string/text_test"
        android:textColor="@color/normal_start"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/image_avatar"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage,TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>