<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF302247">

    <TextView
        android:id="@+id/text_time_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/text_time_zero"
        android:textColor="@color/normal_start"
        app:layout_constraintEnd_toEndOf="@+id/seek_bar_time"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="@+id/seek_bar_time"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar_time"
        tools:ignore="MissingConstraints"
        tools:text="@string/text_time_zero" />

    <TextView
        android:id="@+id/text_artist_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/text_test"
        android:textColor="@color/normal_start"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/text_name_details"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_name_details"
        app:layout_constraintTop_toBottomOf="@+id/image_avatar_details"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_avatar_details"
        android:layout_width="@dimen/layout_width_270"
        android:layout_height="@dimen/layout_height_270"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_song_detail"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6019152" />

    <TextView
        android:id="@+id/text_name_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:text="@string/text_test"
        android:textColor="@color/normal_start"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_avatar_details" />

    <ImageButton
        android:id="@+id/image_btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btn"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/image_btn_pre"
        app:layout_constraintEnd_toStartOf="@+id/image_btn_next"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_btn_pre"
        app:layout_constraintTop_toTopOf="@+id/image_btn_pre"
        app:srcCompat="@drawable/ic_play_circle_outline_54"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/image_btn_pre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF302247"
        app:layout_constraintBottom_toBottomOf="@+id/image_btn_mix"
        app:layout_constraintEnd_toStartOf="@+id/image_btn_play"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_btn_mix"
        app:layout_constraintTop_toTopOf="@+id/image_btn_mix"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_skip_previous_24"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/image_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF302247"
        app:layout_constraintBottom_toBottomOf="@+id/image_btn_play"
        app:layout_constraintEnd_toStartOf="@+id/image_btn_repeat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_btn_play"
        app:layout_constraintTop_toTopOf="@+id/image_btn_play"
        app:layout_constraintVertical_bias="0.409"
        app:srcCompat="@drawable/ic_skip_next_32"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/image_btn_mix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF302247"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_btn_pre"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar_time"
        app:layout_constraintVertical_bias="0.317"
        app:srcCompat="@drawable/ic_compare_arrows_32"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/image_btn_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF302247"
        app:layout_constraintBottom_toBottomOf="@+id/image_btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_btn_next"
        app:layout_constraintTop_toTopOf="@+id/image_btn_next"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_repeat_32"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <SeekBar
        android:id="@+id/seek_bar_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progressTint="#9C27B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.204" />

    <TextView
        android:id="@+id/text_time_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_time_zero"
        android:textColor="@color/normal_start"
        app:layout_constraintEnd_toEndOf="@+id/seek_bar_time"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar_time"
        tools:ignore="MissingConstraints"
        tools:text="@string/text_time_zero" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_song_detail"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/back_custom"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>